# tarotv2

./: .gitignore  .merlin  AUTHORS.txt  INSTALL.txt  README.txt  _oasis  _tags  myocamlbuild.ml  setup.ml
client/: CMakeLists.txt  client_qt.pro  dock_connexion.ui  dock_discussion.cpp  dock_invitation.cpp  dock_invitation.hpp  dock_invitation.ui  dock_login.cpp  dock_login.ui  main.cpp  messages.cpp  messages.hpp  q_requests.cpp  q_requests.hpp  q_value_stream.cpp  tarotv.cpp  tarotv.hpp
ocaml/: _oasis  _tags  myocamlbuild.ml  resource_compiler.ml  setup.ml
serveur/: _oasis  myocamlbuild.ml  setup.ml
src/calculator/: main.ml
src/client_qt/: CMakeLists.txt  client_qt.ml  client_qt.pro  client_qt.qtobjs  client_qt.qtpackages  config.cpp  config.hpp  dock_connexion.cpp  dock_connexion.hpp  dock_discussion.cpp  dock_discussion.hpp  dock_discussion.ui  dock_invitation.cpp  dock_login.cpp  dock_login.hpp  joueur_hors_jeu.cpp  joueur_hors_jeu.hpp  main.cpp  messages.cpp  messages.hpp  q_requests.cpp  q_requests.hpp  q_value_stream.cpp  q_value_stream.hpp  ressource.qrc  tarotv.cpp  tarotv.hpp  tarotv.ui  uis.itarget  value.cpp  value.hpp  vue_jhj.cpp  vue_jhj.hpp
src/libcalculator/: META  calculator.mli  libcalculator.mllib
src/libsgpt/: META  carte.ml  carte.mli  libsgpt.mllib  liste.ml  partie.ml  partie.new.ml  partie_arbitre.ml  protocol.ml  table.ml  table.mli  tarotv.mli  verifications.ml
src/libsgsj/: META  config.ml  config.mli  database.ml  invitations.ml  invitations.mli  joueur.ml  joueur.mli  joueur_hors_jeu.ml  joueur_hors_jeu.mli  libmgmt.mllib  (+5 more)
(+68 files in other folders)
